deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  labels:
    app: trawler
  name: trawler
spec:
  ports:
  - name: metrics
    port: 63512
    protocol: TCP
    targetPort: 63512
  selector:
    app: trawler
  sessionAffinity: None
  type: ClusterIP
